2002-07-23  Darin Adler  <darin@apple.com>

	- fixed 3004818 -- relative urls are assembled incorrectly at ticketmaster
	- fixed 2999279 -- Invalid URI in request at subpage of swatch.com

	The issue here is URLs with paths that start with "/../". RFC 2396 says one
	thing, and that's what CFURL does. But real web browsers do another thing.

        * kwq/KWQKURL.mm:
        (KURL::KWQKURLPrivate::KWQKURLPrivate): Clean up a bit by removing unneeded init().
        (escapeQString): Don't make a copy of the passed-in QString.
        (pathEndsWithSlash): Don't make a copy of the passed-in QString.
        (copyEscapedPath): Make this a static function instead of extern.
        (KURL::KWQKURLPrivate::decompose): Add the new "../" and "./" logic.

2002-07-23  David Hyatt  <hyatt@apple.com>

        * khtml/rendering/font.cpp:
	Fix deployment build bustage by including <algorithm>.
	
        * khtml/rendering/render_frames.cpp:
        (RenderPartObject::calcReplacedWidth):
	Fix a bug with http://www.moveabletype.com's top portion
	not showing up (bug 2986714).  A hack was being improperly
	applied to fixed width plugins, when it should have only
	been applied to variable width plugins.
	
2002-07-23  Darin Adler  <darin@apple.com>

        * Makefile.am: Clean based on all, not all-am, so it happens before subdirs
	if any.

2002-07-23  Darin Adler  <darin@apple.com>

	Changes require a make clean because of the Project Builder bug.
	So I added the "make clean timestamp" hackery.

        * .cvsignore: Ignore the new clean timestamp.
        * force-clean-timestamp: Added.
        * Makefile.am: Add rules for making clean happen.

        * khtml/html/html_formimpl.cpp:
        (HTMLGenericFormElementImpl::defaultEventHandler): Fix NULL dereference
	bug in here that I ran into. Code later down in the same function has
	the check for NULL, so clearly this is just a bug.

        * khtml/rendering/font.cpp: